--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Philosopher&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cinzel&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+
