--- a/public/css/app.css
+++ b/public/css/app.css
@@ -393,16 +393,16 @@ html{
 }
 
 :root{
-  --p: 235 15% 70%;
-  --pf: 235 15% 56%;
-  --sf: 20 73% 22%;
+  --p: 165 100% 99%;
+  --pf: 165 100% 79%;
+  --sf: 10 100% 56%;
   --af: 21 100% 41%;
   --nf: 187 33% 13%;
   --b2: 0 0% 17%;
   --b3: 0 0% 15%;
   --bc: 0 0% 84%;
-  --pc: 235 71% 14%;
-  --sc: 20 100% 86%;
+  --pc: 165 9% 20%;
+  --sc: 10 100% 14%;
   --ac: 21 100% 90%;
   --nc: 187 67% 83%;
   --inc: 193 47% 84%;
@@ -419,7 +419,9 @@ html{
   --border-btn: 1px;
   --tab-border: 1px;
   --tab-radius: 0.5rem;
-  --s: 20 73% 28%;
+  --s: 10 100% 69%;
+  background: #2F2F2F;
+  aquamarine: #68D9AC;
   --a: 21 100% 51%;
   --n: 187 33% 16%;
   --b1: 0 0% 18%;
@@ -759,26 +761,6 @@ html{
   z-index: 20;
   --tw-text-opacity: 1;
   color: hsl(var(--nc) / var(--tw-text-opacity));
-}
-.carousel{
-  display: flex;
-  overflow-x: scroll;
-  scroll-snap-type: x mandatory;
-  scroll-behavior: smooth;
-  -ms-overflow-style: none;
-  scrollbar-width: none;
-}
-.carousel-item{
-  box-sizing: content-box;
-  display: flex;
-  flex: none;
-  scroll-snap-align: start;
-}
-.carousel-center .carousel-item{
-  scroll-snap-align: center;
-}
-.carousel-end .carousel-item{
-  scroll-snap-align: end;
 }
 .checkbox{
   flex-shrink: 0;
@@ -1254,9 +1236,6 @@ html{
   overflow: hidden;
   border-radius: inherit;
 }
-.carousel::-webkit-scrollbar{
-  display: none;
-}
 .checkbox:focus-visible{
   outline: 2px solid hsl(var(--bc));
   outline-offset: 2px;
@@ -1328,12 +1307,6 @@ html{
 }
 .drawer-toggle:focus-visible ~ .drawer-content .drawer-button.btn-secondary{
   outline: 2px solid hsl(var(--s));
-}
-.footer-title{
-  margin-bottom: 0.5rem;
-  font-weight: 700;
-  text-transform: uppercase;
-  opacity: 0.5;
 }
 .label-text{
   font-size: 0.875rem;
@@ -1825,17 +1798,11 @@ html{
 .top-2{
   top: 0.5rem;
 }
-.left-0{
-  left: 0px;
-}
 .-bottom-52{
   bottom: -13rem;
 }
 .left-2{
   left: 0.5rem;
-}
-.float-left{
-  float: left;
 }
 .mx-auto{
   margin-left: auto;
@@ -1900,9 +1867,6 @@ html{
 .mb-12{
   margin-bottom: 3rem;
 }
-.mt-10{
-  margin-top: 2.5rem;
-}
 .mb-10{
   margin-bottom: 2.5rem;
 }
@@ -1927,11 +1891,11 @@ html{
 .mt-5{
   margin-top: 1.25rem;
 }
+.mt-10{
+  margin-top: 2.5rem;
+}
 .block{
   display: block;
-}
-.inline-block{
-  display: inline-block;
 }
 .flex{
   display: flex;
@@ -2002,9 +1966,6 @@ html{
 .w-24{
   width: 6rem;
 }
-.w-72{
-  width: 18rem;
-}
 .w-6{
   width: 1.5rem;
 }
@@ -2028,6 +1989,9 @@ html{
 }
 .max-w-xs{
   max-width: 20rem;
+}
+.max-w-7xl{
+  max-width: 80rem;
 }
 .max-w-sm{
   max-width: 24rem;
@@ -2084,6 +2048,11 @@ html{
   -moz-column-gap: 3rem;
        column-gap: 3rem;
 }
+.space-y-4 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
+}
 .space-x-4 > :not([hidden]) ~ :not([hidden]){
   --tw-space-x-reverse: 0;
   margin-right: calc(1rem * var(--tw-space-x-reverse));
@@ -2125,9 +2094,6 @@ html{
 .border{
   border-width: 1px;
 }
-.border-0{
-  border-width: 0;
-}
 .border-1\.5{
   border-width: 1.5px;
 }
@@ -2145,13 +2111,25 @@ html{
   --tw-border-opacity: 1;
   border-color: rgb(156 163 175 / var(--tw-border-opacity));
 }
-.border-persimmon{
+.border-\[\#ff7d63\]{
   --tw-border-opacity: 1;
-  border-color: rgb(124 54 19 / var(--tw-border-opacity));
+  border-color: rgb(255 125 99 / var(--tw-border-opacity));
+}
+.border-\[\#2f2f2f\]{
+  --tw-border-opacity: 1;
+  border-color: rgb(47 47 47 / var(--tw-border-opacity));
 }
 .border-secondary{
   --tw-border-opacity: 1;
   border-color: hsl(var(--s) / var(--tw-border-opacity));
+}
+.border-persimmon{
+  --tw-border-opacity: 1;
+  border-color: rgb(124 54 19 / var(--tw-border-opacity));
+}
+.border-\[\#FF7D63\]{
+  --tw-border-opacity: 1;
+  border-color: rgb(255 125 99 / var(--tw-border-opacity));
 }
 .bg-backGround{
   --tw-bg-opacity: 1;
@@ -2173,29 +2151,52 @@ html{
   --tw-bg-opacity: 1;
   background-color: hsl(var(--s) / var(--tw-bg-opacity));
 }
-.bg-neutral{
+.bg-\[\#2F2F2F\]{
   --tw-bg-opacity: 1;
-  background-color: hsl(var(--n) / var(--tw-bg-opacity));
+  background-color: rgb(47 47 47 / var(--tw-bg-opacity));
 }
-.bg-test{
+.bg-\[\#2f2f2f\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(47 47 47 / var(--tw-bg-opacity));
+}
+.bg-\[\#68D9AC\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(104 217 172 / var(--tw-bg-opacity));
+}
+.bg-\[\#\#FFED67\]{
+  background-color: ##FFED67;
+}
+.bg-\[\#FFED67\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 237 103 / var(--tw-bg-opacity));
+}
+.bg-\[\#ff7d63\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 125 99 / var(--tw-bg-opacity));
+}
+.bg-\[\#2E2929\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(46 41 41 / var(--tw-bg-opacity));
+}
+.bg-\[\#615A57\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(97 90 87 / var(--tw-bg-opacity));
+}
+.bg-\[\#FF7D63\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 125 99 / var(--tw-bg-opacity));
+}
+.bg-\[\#0A0A0B\]{
   --tw-bg-opacity: 1;
   background-color: rgb(10 10 11 / var(--tw-bg-opacity));
 }
 .bg-gradient-to-tr{
   background-image: linear-gradient(to top right, var(--tw-gradient-stops));
 }
-.from-gunMetal{
-  --tw-gradient-from: #243236;
-  --tw-gradient-to: rgb(36 50 54 / 0);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
 .from-indigo-600{
   --tw-gradient-from: #4f46e5;
   --tw-gradient-to: rgb(79 70 229 / 0);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-.to-persimmon{
-  --tw-gradient-to: #7C3613;
 }
 .to-green-600{
   --tw-gradient-to: #16a34a;
@@ -2203,9 +2204,6 @@ html{
 .bg-clip-text{
   -webkit-background-clip: text;
           background-clip: text;
-}
-.bg-no-repeat{
-  background-repeat: no-repeat;
 }
 .fill-primary{
   fill: hsl(var(--p));
@@ -2216,12 +2214,6 @@ html{
 }
 .p-6{
   padding: 1.5rem;
-}
-.p-10{
-  padding: 2.5rem;
-}
-.p-0{
-  padding: 0px;
 }
 .p-3{
   padding: 0.75rem;
@@ -2252,6 +2244,10 @@ html{
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
 }
+.py-8{
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
 .py-6{
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
@@ -2269,8 +2265,8 @@ html{
 .pt-10{
   padding-top: 2.5rem;
 }
-.text-left{
-  text-align: left;
+.pt-5{
+  padding-top: 1.25rem;
 }
 .text-center{
   text-align: center;
@@ -2363,24 +2359,35 @@ html{
   --tw-text-opacity: 1;
   color: hsl(var(--b1) / var(--tw-text-opacity));
 }
-.text-persimmon{
+.text-\[\#ff7d63\]{
   --tw-text-opacity: 1;
-  color: rgb(124 54 19 / var(--tw-text-opacity));
+  color: rgb(255 125 99 / var(--tw-text-opacity));
 }
-.text-\[\#a7a9be\]{
+.text-\[\#68D9AC\]{
   --tw-text-opacity: 1;
-  color: rgb(167 169 190 / var(--tw-text-opacity));
+  color: rgb(104 217 172 / var(--tw-text-opacity));
 }
 .text-transparent{
   color: transparent;
 }
-.text-accent{
+.text-\[\#2f2f2f\]{
   --tw-text-opacity: 1;
-  color: hsl(var(--a) / var(--tw-text-opacity));
+  color: rgb(47 47 47 / var(--tw-text-opacity));
 }
 .text-slate-400{
   --tw-text-opacity: 1;
   color: rgb(148 163 184 / var(--tw-text-opacity));
+}
+.text-\[\#\#FFED67\]{
+  color: ##FFED67;
+}
+.text-\[\#FFED67\]{
+  --tw-text-opacity: 1;
+  color: rgb(255 237 103 / var(--tw-text-opacity));
+}
+.text-\[\#FF7D63\]{
+  --tw-text-opacity: 1;
+  color: rgb(255 125 99 / var(--tw-text-opacity));
 }
 .underline{
   text-decoration-line: underline;
@@ -2438,16 +2445,6 @@ html{
 .hover\:text-persimmon:hover{
   --tw-text-opacity: 1;
   color: rgb(124 54 19 / var(--tw-text-opacity));
-}
-.hover\:no-underline:hover{
-  text-decoration-line: none;
-}
-.hover\:outline-none:hover{
-  outline: 2px solid transparent;
-  outline-offset: 2px;
-}
-.focus\:no-underline:focus{
-  text-decoration-line: none;
 }
 .focus\:outline-none:focus{
   outline: 2px solid transparent;
@@ -2515,6 +2512,10 @@ html{
 
   .md\:w-3\/4{
     width: 75%;
+  }
+
+  .md\:w-1\/3{
+    width: 33.333333%;
   }
 
   .md\:max-w-lg{
