--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2,7 +2,7 @@
 @import url(https://fonts.googleapis.com/css2?family=Cinzel&display=swap);
 @import url(https://fonts.googleapis.com/css2?family=Megrim&display=swap);
 /*
-! tailwindcss v3.2.4 | MIT License | https://tailwindcss.com
+! tailwindcss v3.2.7 | MIT License | https://tailwindcss.com
 */
 
 /*
@@ -393,22 +393,22 @@ html{
 }
 
 :root{
-  --p: 165 100% 99%;
-  --pf: 165 100% 79%;
-  --sf: 10 100% 56%;
-  --af: 21 100% 41%;
-  --nf: 187 33% 13%;
-  --b2: 0 0% 17%;
-  --b3: 0 0% 15%;
-  --bc: 0 0% 84%;
-  --pc: 165 9% 20%;
-  --sc: 10 100% 14%;
-  --ac: 21 100% 90%;
-  --nc: 187 67% 83%;
-  --inc: 193 47% 84%;
-  --suc: 29 60% 83%;
-  --wac: 43 100% 11%;
-  --erc: 0 100% 14%;
+  --p: 165 100% 99.216%;
+  --pf: 165 100% 79.373%;
+  --sf: 10 100% 55.529%;
+  --af: 21.036 100% 40.627%;
+  --nf: 186.92 32.5% 12.549%;
+  --b2: 0 0% 16.588%;
+  --b3: 0 0% 14.929%;
+  --bc: 0 0% 83.686%;
+  --pc: 165 8.6957% 19.843%;
+  --sc: 10 100% 13.882%;
+  --ac: 21.036 100% 90.157%;
+  --nc: 186.92 66.512% 83.137%;
+  --inc: 193.33 47.143% 83.529%;
+  --suc: 28.696 59.811% 83.412%;
+  --wac: 42.778 100% 11.216%;
+  --erc: 0 100% 14.196%;
   --rounded-box: 1rem;
   --rounded-btn: 0.5rem;
   --rounded-badge: 1.9rem;
@@ -419,16 +419,16 @@ html{
   --border-btn: 1px;
   --tab-border: 1px;
   --tab-radius: 0.5rem;
-  --s: 10 100% 69%;
+  --s: 10 100% 69.412%;
   background: #2F2F2F;
   aquamarine: #68D9AC;
-  --a: 21 100% 51%;
-  --n: 187 33% 16%;
-  --b1: 0 0% 18%;
-  --in: 193 20% 18%;
-  --su: 29 26% 17%;
-  --wa: 43 96% 56%;
-  --er: 0 91% 71%;
+  --a: 21.036 100% 50.784%;
+  --n: 186.92 32.5% 15.686%;
+  --b1: 0 0% 18.431%;
+  --in: 193.33 20% 17.647%;
+  --su: 28.696 26.437% 17.059%;
+  --wa: 42.778 96.429% 56.078%;
+  --er: 0 90.541% 70.98%;
 }
 
 *, ::before, ::after{
@@ -803,6 +803,10 @@ html{
     grid-auto-flow: row dense;
   }
 }
+.form-control{
+  display: flex;
+  flex-direction: column;
+}
 .label{
   display: flex;
   -webkit-user-select: none;
@@ -828,11 +832,6 @@ html{
 }
 .input{
   flex-shrink: 1;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
-  transition-duration: 200ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   height: 3rem;
   padding-left: 1rem;
   padding-right: 1rem;
@@ -846,13 +845,39 @@ html{
   background-color: hsl(var(--b1) / var(--tw-bg-opacity));
   border-radius: var(--rounded-btn, 0.5rem);
 }
+.input-group{
+  display: flex;
+  width: 100%;
+  align-items: stretch;
+}
 .input-group > .input{
   isolation: isolate;
 }
 .input-group > *,
   .input-group > .input,
+  .input-group > .textarea,
   .input-group > .select{
   border-radius: 0px;
+}
+.input-group :where(span){
+  display: flex;
+  align-items: center;
+  --tw-bg-opacity: 1;
+  background-color: hsl(var(--b3, var(--b2)) / var(--tw-bg-opacity));
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+.input-group > :first-child{
+  border-top-left-radius: var(--rounded-btn, 0.5rem);
+  border-top-right-radius: 0;
+  border-bottom-left-radius: var(--rounded-btn, 0.5rem);
+  border-bottom-right-radius: 0;
+}
+.input-group > :last-child{
+  border-top-left-radius: 0;
+  border-top-right-radius: var(--rounded-btn, 0.5rem);
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: var(--rounded-btn, 0.5rem);
 }
 .link{
   cursor: pointer;
@@ -965,11 +990,6 @@ html{
   --tw-bg-opacity: 1;
   background-color: hsl(var(--b1) / var(--tw-bg-opacity));
   font-weight: 600;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
-  transition-duration: 200ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   border-radius: var(--rounded-btn, 0.5rem);
   background-image: linear-gradient(45deg, transparent 50%, currentColor 50%), linear-gradient(135deg, currentColor 50%, transparent 50%);
   background-position: calc(100% - 20px) calc(1px + 50%), calc(100% - 16px) calc(1px + 50%);
@@ -1361,6 +1381,10 @@ html{
   outline: 2px solid currentColor;
   outline-offset: 2px;
 }
+.mask-squircle{
+  -webkit-mask-image: url("data:image/svg+xml,%3csvg width='200' height='200' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M100 0C20 0 0 20 0 100s20 100 100 100 100-20 100-100S180 0 100 0Z'/%3e%3c/svg%3e");
+  mask-image: url("data:image/svg+xml,%3csvg width='200' height='200' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M100 0C20 0 0 20 0 100s20 100 100 100 100-20 100-100S180 0 100 0Z'/%3e%3c/svg%3e");
+}
 .mask-triangle{
   -webkit-mask-image: url("data:image/svg+xml,%3csvg width='174' height='149' xmlns='http://www.w3.org/2000/svg'%3e%3cpath fill='black' d='m87 148.476-86.603.185L43.86 74.423 87 0l43.14 74.423 43.463 74.238z' fill-rule='evenodd'/%3e%3c/svg%3e");
   mask-image: url("data:image/svg+xml,%3csvg width='174' height='149' xmlns='http://www.w3.org/2000/svg'%3e%3cpath fill='black' d='m87 148.476-86.603.185L43.86 74.423 87 0l43.14 74.423 43.463 74.238z' fill-rule='evenodd'/%3e%3c/svg%3e");
@@ -1464,6 +1488,9 @@ html{
   .select[size].select:not([size="1"]){
   background-image: none;
   padding-right: 1rem;
+}
+[dir="rtl"] .select{
+  background-position: calc(0% + 12px) calc(1px + 50%), calc(0% + 16px) calc(1px + 50%);
 }
 .steps .step:before{
   top: 0px;
@@ -1786,8 +1813,11 @@ html{
 .relative{
   position: relative;
 }
-.top-0{
-  top: 0px;
+.-bottom-52{
+  bottom: -13rem;
+}
+.left-2{
+  left: 0.5rem;
 }
 .right-0{
   right: 0px;
@@ -1795,14 +1825,15 @@ html{
 .right-2{
   right: 0.5rem;
 }
+.top-0{
+  top: 0px;
+}
 .top-2{
   top: 0.5rem;
 }
-.-bottom-52{
-  bottom: -13rem;
-}
-.left-2{
-  left: 0.5rem;
+.mx-4{
+  margin-left: 1rem;
+  margin-right: 1rem;
 }
 .mx-auto{
   margin-left: auto;
@@ -1812,87 +1843,86 @@ html{
   margin-top: 3rem;
   margin-bottom: 3rem;
 }
-.mx-4{
-  margin-left: 1rem;
-  margin-right: 1rem;
-}
-.mb-5{
-  margin-bottom: 1.25rem;
+.-mt-px{
+  margin-top: -1px;
 }
 .mb-0{
   margin-bottom: 0px;
 }
-.ml-3{
-  margin-left: 0.75rem;
-}
-.ml-auto{
-  margin-left: auto;
-}
-.mr-3{
-  margin-right: 0.75rem;
-}
-.mt-4{
-  margin-top: 1rem;
-}
-.mt-3{
-  margin-top: 0.75rem;
-}
-.ml-1{
-  margin-left: 0.25rem;
-}
-.mt-2{
-  margin-top: 0.5rem;
-}
-.mr-2{
-  margin-right: 0.5rem;
-}
-.ml-2{
-  margin-left: 0.5rem;
-}
-.ml-4{
-  margin-left: 1rem;
-}
-.mt-8{
-  margin-top: 2rem;
-}
-.ml-12{
-  margin-left: 3rem;
-}
-.-mt-px{
-  margin-top: -1px;
-}
-.mt-6{
-  margin-top: 1.5rem;
-}
-.mb-12{
-  margin-bottom: 3rem;
+.mb-1{
+  margin-bottom: 0.25rem;
 }
 .mb-10{
   margin-bottom: 2.5rem;
 }
-.mb-1{
-  margin-bottom: 0.25rem;
-}
-.mt-12{
-  margin-top: 3rem;
-}
-.mb-6{
-  margin-bottom: 1.5rem;
-}
-.mt-16{
-  margin-top: 4rem;
-}
-.mr-5{
-  margin-right: 1.25rem;
+.mb-12{
+  margin-bottom: 3rem;
 }
 .mb-2{
   margin-bottom: 0.5rem;
 }
-.mt-5{
-  margin-top: 1.25rem;
+.mb-5{
+  margin-bottom: 1.25rem;
+}
+.mb-6{
+  margin-bottom: 1.5rem;
+}
+.mb-8{
+  margin-bottom: 2rem;
+}
+.ml-1{
+  margin-left: 0.25rem;
+}
+.ml-12{
+  margin-left: 3rem;
+}
+.ml-2{
+  margin-left: 0.5rem;
+}
+.ml-3{
+  margin-left: 0.75rem;
+}
+.ml-4{
+  margin-left: 1rem;
+}
+.ml-auto{
+  margin-left: auto;
+}
+.mr-2{
+  margin-right: 0.5rem;
+}
+.mr-3{
+  margin-right: 0.75rem;
+}
+.mr-5{
+  margin-right: 1.25rem;
 }
 .mt-10{
   margin-top: 2.5rem;
+}
+.mt-12{
+  margin-top: 3rem;
+}
+.mt-16{
+  margin-top: 4rem;
+}
+.mt-2{
+  margin-top: 0.5rem;
+}
+.mt-3{
+  margin-top: 0.75rem;
+}
+.mt-4{
+  margin-top: 1rem;
+}
+.mt-5{
+  margin-top: 1.25rem;
+}
+.mt-6{
+  margin-top: 1.5rem;
+}
+.mt-8{
+  margin-top: 2rem;
 }
 .block{
   display: block;
@@ -1906,53 +1936,38 @@ html{
 .hidden{
   display: none;
 }
-.h-5{
-  height: 1.25rem;
-}
-.h-8{
-  height: 2rem;
+.h-1{
+  height: 0.25rem;
 }
 .h-16{
   height: 4rem;
 }
-.h-full{
-  height: 100%;
-}
 .h-2\/3{
   height: 66.666667%;
-}
-.h-6{
-  height: 1.5rem;
-}
-.h-1{
-  height: 0.25rem;
-}
-.h-48{
-  height: 12rem;
 }
 .h-40{
   height: 10rem;
 }
+.h-48{
+  height: 12rem;
+}
+.h-5{
+  height: 1.25rem;
+}
+.h-6{
+  height: 1.5rem;
+}
 .h-60{
   height: 15rem;
 }
+.h-8{
+  height: 2rem;
+}
+.h-full{
+  height: 100%;
+}
 .min-h-screen{
   min-height: 100vh;
-}
-.w-5{
-  width: 1.25rem;
-}
-.w-8{
-  width: 2rem;
-}
-.w-auto{
-  width: auto;
-}
-.w-full{
-  width: 100%;
-}
-.w-96{
-  width: 24rem;
 }
 .w-1\/2{
   width: 50%;
@@ -1966,35 +1981,50 @@ html{
 .w-24{
   width: 6rem;
 }
-.w-6{
-  width: 1.5rem;
+.w-270{
+  width: 270px;
 }
 .w-28{
   width: 7rem;
 }
+.w-5{
+  width: 1.25rem;
+}
+.w-6{
+  width: 1.5rem;
+}
 .w-60{
   width: 15rem;
+}
+.w-8{
+  width: 2rem;
 }
 .w-80{
   width: 20rem;
 }
-.w-270{
-  width: 270px;
+.w-96{
+  width: 24rem;
+}
+.w-auto{
+  width: auto;
+}
+.w-full{
+  width: 100%;
 }
 .max-w-6xl{
   max-width: 72rem;
-}
-.max-w-xl{
-  max-width: 36rem;
-}
-.max-w-xs{
-  max-width: 20rem;
 }
 .max-w-7xl{
   max-width: 80rem;
 }
 .max-w-sm{
   max-width: 24rem;
+}
+.max-w-xl{
+  max-width: 36rem;
+}
+.max-w-xs{
+  max-width: 20rem;
 }
 .flex-shrink{
   flex-shrink: 1;
@@ -2041,22 +2071,22 @@ html{
 .justify-around{
   justify-content: space-around;
 }
-.gap-y-5{
-  row-gap: 1.25rem;
-}
 .gap-x-12{
   -moz-column-gap: 3rem;
        column-gap: 3rem;
 }
-.space-y-4 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-y-reverse: 0;
-  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
+.gap-y-5{
+  row-gap: 1.25rem;
 }
 .space-x-4 > :not([hidden]) ~ :not([hidden]){
   --tw-space-x-reverse: 0;
   margin-right: calc(1rem * var(--tw-space-x-reverse));
   margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
+}
+.space-y-4 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
 }
 .self-start{
   align-self: flex-start;
@@ -2073,9 +2103,6 @@ html{
 .overflow-hidden{
   overflow: hidden;
 }
-.rounded-lg{
-  border-radius: 0.5rem;
-}
 .rounded{
   border-radius: 0.25rem;
 }
@@ -2084,6 +2111,9 @@ html{
 }
 .rounded-full{
   border-radius: 9999px;
+}
+.rounded-lg{
+  border-radius: 0.5rem;
 }
 .rounded-md{
   border-radius: 0.375rem;
@@ -2097,11 +2127,19 @@ html{
 .border-1\.5{
   border-width: 1.5px;
 }
+.border-r{
+  border-right-width: 1px;
+}
 .border-t{
   border-top-width: 1px;
 }
-.border-r{
-  border-right-width: 1px;
+.border-\[\#FF7D63\]{
+  --tw-border-opacity: 1;
+  border-color: rgb(255 125 99 / var(--tw-border-opacity));
+}
+.border-\[\#ff7d63\]{
+  --tw-border-opacity: 1;
+  border-color: rgb(255 125 99 / var(--tw-border-opacity));
 }
 .border-gray-200{
   --tw-border-opacity: 1;
@@ -2111,41 +2149,13 @@ html{
   --tw-border-opacity: 1;
   border-color: rgb(156 163 175 / var(--tw-border-opacity));
 }
-.border-\[\#ff7d63\]{
-  --tw-border-opacity: 1;
-  border-color: rgb(255 125 99 / var(--tw-border-opacity));
-}
-.border-\[\#FF7D63\]{
-  --tw-border-opacity: 1;
-  border-color: rgb(255 125 99 / var(--tw-border-opacity));
-}
-.border-secondary{
-  --tw-border-opacity: 1;
-  border-color: hsl(var(--s) / var(--tw-border-opacity));
-}
 .border-persimmon{
   --tw-border-opacity: 1;
   border-color: rgb(124 54 19 / var(--tw-border-opacity));
 }
-.bg-backGround{
-  --tw-bg-opacity: 1;
-  background-color: rgb(47 47 47 / var(--tw-bg-opacity));
-}
-.bg-white{
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-.bg-gray-100{
-  --tw-bg-opacity: 1;
-  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
-}
-.bg-base-100{
-  --tw-bg-opacity: 1;
-  background-color: hsl(var(--b1) / var(--tw-bg-opacity));
-}
-.bg-secondary{
-  --tw-bg-opacity: 1;
-  background-color: hsl(var(--s) / var(--tw-bg-opacity));
+.border-secondary{
+  --tw-border-opacity: 1;
+  border-color: hsl(var(--s) / var(--tw-border-opacity));
 }
 .bg-\[\#0A0A0B\]{
   --tw-bg-opacity: 1;
@@ -2154,6 +2164,26 @@ html{
 .bg-\[\#FF7D63\]{
   --tw-bg-opacity: 1;
   background-color: rgb(255 125 99 / var(--tw-bg-opacity));
+}
+.bg-backGround{
+  --tw-bg-opacity: 1;
+  background-color: rgb(47 47 47 / var(--tw-bg-opacity));
+}
+.bg-base-100{
+  --tw-bg-opacity: 1;
+  background-color: hsl(var(--b1) / var(--tw-bg-opacity));
+}
+.bg-gray-100{
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+}
+.bg-secondary{
+  --tw-bg-opacity: 1;
+  background-color: hsl(var(--s) / var(--tw-bg-opacity));
+}
+.bg-white{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 .bg-gradient-to-tr{
   background-image: linear-gradient(to top right, var(--tw-gradient-stops));
@@ -2177,58 +2207,58 @@ html{
   -o-object-fit: cover;
      object-fit: cover;
 }
-.p-6{
-  padding: 1.5rem;
+.p-1{
+  padding: 0.25rem;
 }
 .p-3{
   padding: 0.75rem;
 }
-.p-1{
-  padding: 0.25rem;
-}
 .p-4{
   padding: 1rem;
 }
-.py-4{
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
-.px-6{
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
-}
-.px-4{
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-.py-2{
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-.py-5{
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
-}
-.py-8{
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-}
-.py-6{
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
+.p-6{
+  padding: 1.5rem;
 }
 .px-10{
   padding-left: 2.5rem;
   padding-right: 2.5rem;
 }
+.px-4{
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+.px-6{
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+.py-2{
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+.py-4{
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+.py-5{
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
+.py-6{
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+.py-8{
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
 .pt-0{
   padding-top: 0px;
 }
-.pt-8{
-  padding-top: 2rem;
-}
 .pt-10{
   padding-top: 2.5rem;
+}
+.pt-8{
+  padding-top: 2rem;
 }
 .text-center{
   text-align: center;
@@ -2239,24 +2269,21 @@ html{
 .font-Philosopher{
   font-family: philosopher-mono, Philosopher, sans-serif;
 }
-.text-sm{
-  font-size: 0.875rem;
-  line-height: 1.25rem;
+.text-2xl{
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 .text-lg{
   font-size: 1.125rem;
   line-height: 1.75rem;
 }
-.text-2xl{
-  font-size: 1.5rem;
-  line-height: 2rem;
+.text-sm{
+  font-size: 0.875rem;
+  line-height: 1.25rem;
 }
 .text-xl{
   font-size: 1.25rem;
   line-height: 1.75rem;
-}
-.font-semibold{
-  font-weight: 600;
 }
 .font-bold{
   font-weight: 700;
@@ -2264,14 +2291,36 @@ html{
 .font-medium{
   font-weight: 500;
 }
+.font-semibold{
+  font-weight: 600;
+}
 .uppercase{
   text-transform: uppercase;
+}
+.capitalize{
+  text-transform: capitalize;
 }
 .leading-7{
   line-height: 1.75rem;
 }
 .tracking-wider{
   letter-spacing: 0.05em;
+}
+.text-\[\#FF7D63\]{
+  --tw-text-opacity: 1;
+  color: rgb(255 125 99 / var(--tw-text-opacity));
+}
+.text-\[\#ff7d63\]{
+  --tw-text-opacity: 1;
+  color: rgb(255 125 99 / var(--tw-text-opacity));
+}
+.text-base-100{
+  --tw-text-opacity: 1;
+  color: hsl(var(--b1) / var(--tw-text-opacity));
+}
+.text-cadetBlue{
+  --tw-text-opacity: 1;
+  color: rgb(167 169 190 / var(--tw-text-opacity));
 }
 .text-gray-200{
   --tw-text-opacity: 1;
@@ -2301,40 +2350,24 @@ html{
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
 }
-.text-secondary{
-  --tw-text-opacity: 1;
-  color: hsl(var(--s) / var(--tw-text-opacity));
-}
-.text-white{
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
 .text-primary{
   --tw-text-opacity: 1;
   color: hsl(var(--p) / var(--tw-text-opacity));
 }
-.text-cadetBlue{
+.text-secondary{
   --tw-text-opacity: 1;
-  color: rgb(167 169 190 / var(--tw-text-opacity));
-}
-.text-base-100{
-  --tw-text-opacity: 1;
-  color: hsl(var(--b1) / var(--tw-text-opacity));
-}
-.text-\[\#ff7d63\]{
-  --tw-text-opacity: 1;
-  color: rgb(255 125 99 / var(--tw-text-opacity));
-}
-.text-\[\#FF7D63\]{
-  --tw-text-opacity: 1;
-  color: rgb(255 125 99 / var(--tw-text-opacity));
-}
-.text-transparent{
-  color: transparent;
+  color: hsl(var(--s) / var(--tw-text-opacity));
 }
 .text-slate-400{
   --tw-text-opacity: 1;
   color: rgb(148 163 184 / var(--tw-text-opacity));
+}
+.text-transparent{
+  color: transparent;
+}
+.text-white{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 .underline{
   text-decoration-line: underline;
@@ -2348,11 +2381,6 @@ html{
   --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
-.shadow-xl{
-  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
 .shadow-lg{
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
@@ -2363,15 +2391,20 @@ html{
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
-.transition-all{
-  transition-property: all;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
+.shadow-xl{
+  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 .transition{
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+.transition-all{
+  transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
@@ -2457,12 +2490,12 @@ html{
 }
 @media (min-width: 768px){
 
-  .md\:w-3\/4{
-    width: 75%;
-  }
-
   .md\:w-1\/3{
     width: 33.333333%;
+  }
+
+  .md\:w-3\/4{
+    width: 75%;
   }
 
   .md\:max-w-lg{
